--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  hive_ce: ^2.11.4
+  hive_ce_flutter: ^2.3.2
 
 dev_dependencies:
+  hive_ce_generator: ^1.9.3
   flutter_test:
     sdk: flutter
 
