--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   vibration: ^3.1.3
   audioplayers: ^6.5.1
+  shared_preferences: ^2.5.3
   flutter:
     sdk: flutter
 
