--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  hive_ce: ^2.14.0
+  hive_ce_flutter: ^2.1.0
 
 dev_dependencies:
+  build_runner: ^2.4.13
+  hive_ce_generator: ^1.8.0
   flutter_test:
     sdk: flutter
 
