--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   hive_ce: ^2.14.0
   hive_ce_flutter: ^2.1.0
+  flutter_local_notifications: ^19.4.2
 
 dev_dependencies:
   build_runner: ^2.4.13
