--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hive_ce: ^2.14.0
   hive_ce_flutter: ^2.1.0
   flutter_local_notifications: ^19.4.2
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   build_runner: ^2.4.13
