--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   hive_ce_flutter: ^2.1.0
   flutter_local_notifications: ^19.4.2
   flutter_launcher_icons: ^0.14.4
+  timezone: ^0.10.1
+  flutter_timezone: ^5.0.0
 
 dev_dependencies:
   build_runner: ^2.4.13
